--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "lib"
   ],
   "dependencies": {
+    "chalk": "^1.1.0",
     "gulp-util": "^3.0.1",
     "luacheck": "^0.1.0",
+    "text-table": "^0.2.0",
     "through2": "^0.6.3"
   },
   "devDependencies": {
